--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
 /* CSS - Cascading Style Sheet */
 /* Palette color codes */
 /* Palette URL: http://paletton.com/#uid=30X0l0kw0t7kJAiqjwjzLnlFPi8 */
@@ -25,20 +28,31 @@
 .color-secondary-2-3 { color: #1B0F81 }
 .color-secondary-2-4 { color: #130964 }
 
+p, h1, h2, h3 {
+    font-family: 'Rubik', sans-serif;
+    color: rgb(69, 69, 69);
+    margin-bottom: 0.2rem;
+}
+
+p {
+    font-size: large;
+}
+
 body {
     margin: 0;
-    max-width: 960px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
 .main {
     margin-right: auto;
     margin-left: auto;
-    max-width: 960px;
+    max-width: 1200px;
     padding: 2rem;
+    border-bottom: 2px solid #438FB0;
 
     /* only on developmen */
-    border: 1px solid saddlebrown;
+    /* border: 1px solid saddlebrown; */
 }
 
 a {
