--- a/src/Components/CartList/Cart/Cart.css
+++ b/src/Components/CartList/Cart/Cart.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
+    width: 45%;
+    justify-content: space-between;
 }
 
 .cart-inhalt-text {
@@ -16,7 +18,8 @@
 .cart-image {
     display: block;
     max-width: 100%;
-    width: 15%;
+    width: 100%;
+    height: 100%;
 }
 
 .cart-container {
