--- a/src/Components/CartList/CartList.css
+++ b/src/Components/CartList/CartList.css
@@ -1,10 +1,5 @@
-/* .CartList {
+.CartList {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-
-.CartList div {
-    margin-right: 1rem;
-    width: 100%;
-} */
