--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -1,9 +1,7 @@
 .footer{
     margin-top: 1rem;
     padding: 1rem;
-    /* position: fixed; */
     bottom: 0;
-    border-top: 2px solid #438FB0;
-    background-color: white;
+    background-color: rgb(7, 104, 146, 0.8);
     height: 60px;
   }
