--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -33,7 +33,7 @@ li {
   display: flex;
   justify-content: space-between;
   height: 100px;
-  font-weight: 900;
+  font-weight: 600;
   width: none;
   align-items: center;
   background-color: rgb(7, 104, 146, 0.8);
@@ -68,12 +68,14 @@ li {
   /* border-style: dashed; */
 }
 .landing_img {
-  display: block;
-  max-width: 100%;
+    max-width: 100%;
+    height: 400px;
+}
+
+.landing_img img {
   object-fit: cover;
-  overflow: hidden;
+  height: 100%;
   width: 100%;
-  height: 400px;
 }
 
 .button {
