--- a/client/src/Components/CartList/Cart/Cart.css
+++ b/client/src/Components/CartList/Cart/Cart.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
-    width: 45%;
+    width: clamp(500px,45%,600px);
     justify-content: space-between;
 }
 
