--- a/client/src/Components/Navigation/Navigation.css
+++ b/client/src/Components/Navigation/Navigation.css
@@ -32,7 +32,7 @@ li {
   color: #18a0fb;
   display: flex;
   justify-content: space-between;
-  height: 100px;
+  height: 50px;
   font-weight: 600;
   width: none;
   align-items: center;
@@ -58,7 +58,6 @@ li {
   /* border-style: double; */
 }
 .toggler {
-  height: 30px;
   widows: 90px;
   right: 0;
   justify-content: center;
@@ -73,7 +72,7 @@ li {
 }
 
 .landing_img img {
-  object-fit: cover;
+  object-fit: contain;
   height: 100%;
   width: 100%;
 }
@@ -143,14 +142,13 @@ li {
   color: #E89B00;
 }
 
-/* .overlay {
+.overlay {
   height: 100%;
   width: 50%;
   position: fixed;
   z-index: 1;
   top: 0;
-  ri: 0;
-   z-index: 1;
+  z-index: 1;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.9);
@@ -170,7 +168,7 @@ li {
   padding: 8px;
   text-decoration: none;
   font-size: 36px;
-  color: #818181;
+  color: #E89B00;
   display: block;
   transition: 0.3s;
 }
@@ -185,4 +183,4 @@ li {
   top: 20px;
   right: 45px;
   font-size: 60px;
-} */
+}
