--- a/client/src/Pages/Kontakt/Kontakt.css
+++ b/client/src/Pages/Kontakt/Kontakt.css
@@ -3,6 +3,7 @@
 .kontakt-container {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .kontakt-container div span {
@@ -97,6 +98,7 @@
   font-size: 2.3em;
   text-align: center;
   letter-spacing: 7px;
+  color : #03405B;
 }
 
 #form {
