--- a/server/main.handlebars
+++ b/server/main.handlebars
@@ -202,10 +202,9 @@
                                              line-height:30px; 
                                              color:#ffffff;" valign="top" align="center">
 
-                                                    Hi! This is a sample email in an HTML template. This was created for
-                                                    me to practise creating HTML
-                                                    emails, and to provide a future template for other emails.
-
+                                                    <h3>Kontakt Daten:</h3>
+                                                        <div>Email: {{mail}}</div> 
+                                                        <div>Tel: {{tel}}</div> 
                                                 </td>
                                             </tr>
                                             <tr>
@@ -225,7 +224,7 @@
                                              letter-spacing:2px; 
                                              padding-bottom:12px;" valign="top" align="center">
 
-                                                    What does this mean? I'm glad you asked!
+                                                    Eine Anfrage von <b>{{name}}</b> 
 
                                                 </td>
                                             </tr>
@@ -247,9 +246,7 @@
                                              letter-spacing:2px; 
                                              padding-bottom:12px;" valign="top" align="center">
 
-                                                    It means I am ready to test it by sending it to different email
-                                                    accounts on different browsers,
-                                                    to see how it looks!
+                                                   {{text}}
 
                                                 </td>
                                             </tr>
@@ -273,7 +270,7 @@
                                              font-size:11px; 
                                              line-height:18px; 
                                              color:#999999;" valign="top" align="center">
-                                                    © 2020 mh-trockenbau.de. All Rights Reserved.
+                                                    © 2021 mh-trockenbau.de. All Rights Reserved.
                                                 </td>
                                             </tr>
                                         </tbody>
