--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,7 +42,7 @@ p, h1, h2, h3 {
 }
 
 p {
-    font-size: large;
+    font-size: 1.3rem;
 }
 
 h1 {
@@ -63,4 +63,5 @@ h1 {
 
 a {
     text-decoration: none;
+    font-size: 1.3rem;
 }
